fix overlapping and add remove for discipline and background

--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@ code {
 .full-width {
     /*width: 100%;*/
 }
+
+.constrained {
+    max-width: 100%;
+}
